# ugene

./: CMakeLists.txt  ugene.pro
etc/script/linux/: release-bundle.txt  run_xml_tests_with_cyr_paths.sh  run_xml_tests_with_different_symbols_paths.sh  run_xml_tests_with_spaces_paths.sh
etc/script/mac/: bundle.sh  release-bundle.txt
etc/script/windows/: release-bundle.txt  run_xml_tests_with_cyr_paths.sh  run_xml_tests_with_different_symbols_paths.sh  run_xml_tests_with_spaces_paths.sh
src/: Plugin.cmake
src/corelibs/U2Core/: CMakeLists.txt
src/corelibs/U2Core/src/datatype/: AnnotationGroup.cpp  AnnotationGroup.h
src/corelibs/U2Core/src/datatype/primers/: PrimerDimersFinder.cpp  PrimerStatistics.cpp  PrimerStatistics.h
src/corelibs/U2Core/src/globals/: U2SafePoints.h
src/corelibs/U2Core/src/gobjects/: AssemblyObject.cpp  AssemblyObject.h  MultipleAlignmentObject.cpp
src/corelibs/U2Core/src/tasks/: ExternalToolRunTask.cpp  ExternalToolRunTask.h  LoadRemoteDocumentTask.cpp  LoadRemoteDocumentTask.h
src/corelibs/U2Core/src/util/: FileAndDirectoryUtils.cpp  U1AnnotationUtils.cpp  U1AnnotationUtils.h
src/corelibs/U2Formats/: CMakeLists.txt
src/corelibs/U2Private/: CMakeLists.txt
src/corelibs/U2View/: U2View.pro
src/plugins/biostruct3d_view/: CMakeLists.txt
src/plugins/smith_waterman/: CMakeLists.txt
src/ugeneui/: CMakeLists.txt
tests/: PrecommitTests_x64.list  SpacesInPathsTests_x64.list  spaces_in_path_cmdline_common_suite.xml
tests/pcr_dna_assembly/: test_0001.xml  test_0002.xml  test_0003.xml  test_0004.xml  test_0005.xml
(+169 files in other folders)
